# django-boilerplate

./: .dockerignore  Makefile  pyproject.toml
core/project/: asgi.py  wsgi.py
core/project/settings/: main.py
docker_compose/: app.yaml  storages.yaml
